--- a/src/styles/board.scss
+++ b/src/styles/board.scss
@@ -86,6 +86,7 @@
             gap: 10px;
             margin: 10px 0;
             padding: 0;
+            list-style: none;
         }
 
         & footer .add_card {
@@ -120,6 +121,7 @@
     padding: 8px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     cursor: grab;
+    list-style: none;
 
     & .content {
         margin: 0;
