--- a/src/styles/board.scss
+++ b/src/styles/board.scss
@@ -39,6 +39,7 @@
         }
 
         & .card_container {
+            position: relative;
             display: flex;
             flex-direction: column;
             margin: 10px 0 0 0;
@@ -96,32 +97,36 @@
             }
 
             & .add_card_btn {
-                display: flex;
-                gap: 10px;
-                justify-content: flex-start;
-                align-items: center;
-                background: transparent;
-                border: none;
-                cursor: pointer;
-                padding: 8px;
-                font-size: 0.9em;
-                border-radius: 8px;
-                width: 100%;
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                right: 0;
 
-                & p {
-                    margin: 0;
-                }
+                & button {
+                    display: flex;
+                    gap: 10px;
+                    justify-content: flex-start;
+                    align-items: center;
+                    background: transparent;
+                    border: none;
+                    cursor: pointer;
+                    padding: 8px;
+                    font-size: 0.9em;
+                    border-radius: 8px;
+                    width: 100%;
 
-                &:hover {
-                    background: #d2d2d2;
+                    & p {
+                        margin: 0;
+                    }
+
+                    &:hover {
+                        background: #d2d2d2;
+                    }
                 }
             }
 
             & .add_card {
-                display: flex;
-                flex-direction: column;
-                gap: 10px;
-                cursor: pointer;
+                position: relative;
                 font-size: 0.9em;
                 border-radius: 8px;
                 margin-bottom: 10px;
@@ -137,12 +142,20 @@
                     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
                     outline: none;
                     overflow: hidden;
+                    transition: height 0.225s, margin 0.225s;
+                    margin-bottom: 40px;
                 }
 
                 & .buttons {
+                    width: 240px;
+                    position: absolute;
+                    bottom: 0;
                     display: flex;
                     gap: 10px;
                     align-items: center;
+                    transition: opacity 0.225s ease;
+                    opacity: 1;
+                    height: 40px;
 
                     & .save {
                         font-size: 1em;
@@ -154,18 +167,21 @@
                     }
 
                     & .cancel {
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        border: none;
-                        background: none;
-                        font-size: 1.5em;
-                        cursor: pointer;
-                        margin-right: auto;
+                        flex-grow: 1;
 
-                        & ion-icon {
-                            font-size: 1.2em;
-                            transform: rotate(45deg);
+                        & button {
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                            border: none;
+                            background: none;
+                            font-size: 1.5em;
+                            cursor: pointer;
+
+                            & ion-icon {
+                                font-size: 1.2em;
+                                transform: rotate(45deg);
+                            }
                         }
                     }
 
