--- a/src/styles/board.scss
+++ b/src/styles/board.scss
@@ -2,11 +2,90 @@
     display: flex;
     padding: 10px;
 
+    & .add_list_wrapper {
+        background: transparent;
+        height: fit-content;
+        border-radius: 8px;
+        width: 256px;
+
+        & .add_list {
+            background: #e9e9e9;
+            border-radius: 8px;
+            padding: 8px;
+
+            & input {
+                padding: 8px;
+                border-radius: 8px;
+                border: none;
+                width: calc(100% - 24px);
+                margin-bottom: 10px;
+                font-size: 0.9em;
+
+                &:focus {
+                    outline: 2px solid lightblue;
+                }
+            }
+
+            & .buttons {
+                display: flex;
+                gap: 10px;
+
+                & .save {
+                    font-size: 0.9em;
+                    background: lightblue;
+                    border: none;
+                    border-radius: 8px;
+                    padding: 8px;
+                    cursor: pointer;
+                }
+
+                & .cancel {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    border: none;
+                    background: none;
+                    font-size: 1.3em;
+                    cursor: pointer;
+
+                    & ion-icon {
+                        font-size: 1.2em;
+                        transform: rotate(45deg);
+                    }
+                }
+            }
+        }
+
+        & .add_list_btn {
+            height: fit-content;
+            display: flex;
+            gap: 10px;
+            justify-content: flex-start;
+            align-items: center;
+            background: #ffffff3d;
+            border: none;
+            cursor: pointer;
+            font-size: 0.9em;
+            padding: 8px;
+            border-radius: 8px;
+            transition: all 0.225s ease;
+            width: 100%;
+
+            & p {
+                margin: 0;
+            }
+
+            &:hover {
+                background: #ffffff52;
+            }
+        }
+    }
+
     & .list {
         background: #e9e9e9;
         border-radius: 8px;
-        width: 256px;
-        padding: 8px;
+        width: 272px;
+        padding: 8px 0;
         height: fit-content;
         margin-right: 10px;
 
@@ -14,16 +93,30 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 8px 0;
+            padding: 0 8px;
+
+            & input {
+                padding: 4px 8px;
+            }
 
             & .name {
                 margin: 0;
+                padding: 4px;
                 font-size: 1em;
                 font-weight: 500;
+                line-height: 30px;
+                border-radius: 8px;
+                width: 100%;
+                border: none;
+
+                &:focus {
+                    outline: 2px solid lightblue;
+                }
             }
 
             & .action {
                 position: relative;
+                margin-left: 5px;
 
                 & .action_btn {
                     background: none;
@@ -43,7 +136,7 @@
             display: flex;
             flex-direction: column;
             margin: 10px 0 0 0;
-            padding: 0;
+            padding: 0 8px;
             list-style: none;
 
             & .card {
@@ -99,8 +192,7 @@
             & .add_card_btn {
                 position: absolute;
                 bottom: 0;
-                left: 0;
-                right: 0;
+                width: 256px;
 
                 & button {
                     display: flex;
