--- a/src/styles/board.scss
+++ b/src/styles/board.scss
@@ -55,22 +55,10 @@
     & .add_list_btn {
         position: absolute;
         height: fit-content;
-        display: flex;
-        gap: 10px;
-        justify-content: flex-start;
-        align-items: center;
         background: #ffffff3d;
-        border: none;
-        cursor: pointer;
         font-size: 0.9em;
-        padding: 8px;
-        border-radius: 8px;
         transition: all 0.225s ease;
         width: 272px;
-
-        & p {
-            margin: 0;
-        }
 
         &:hover {
             background: #ffffff52;
@@ -190,26 +178,8 @@
                 bottom: 0;
                 width: 256px;
 
-                & button {
-                    display: flex;
-                    gap: 10px;
-                    justify-content: flex-start;
-                    align-items: center;
-                    background: transparent;
-                    border: none;
-                    cursor: pointer;
-                    padding: 8px;
-                    font-size: 0.9em;
-                    border-radius: 8px;
-                    width: 100%;
-
-                    & p {
-                        margin: 0;
-                    }
-
-                    &:hover {
-                        background: #d2d2d2;
-                    }
+                & button:hover {
+                    background: #d2d2d2;
                 }
             }
 
@@ -220,17 +190,6 @@
                 margin-bottom: 10px;
 
                 & textarea {
-                    width: 240px;
-                    font-size: 1em;
-                    border: none;
-                    border-radius: 8px;
-                    resize: none;
-                    padding: 8px;
-                    height: 69px;
-                    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-                    outline: none;
-                    overflow: hidden;
-                    transition: height 0.225s, margin 0.225s;
                     margin-bottom: 40px;
                 }
 
@@ -246,12 +205,7 @@
                     height: 40px;
 
                     & .save {
-                        font-size: 1em;
                         background: lightblue;
-                        border: none;
-                        border-radius: 8px;
-                        padding: 8px;
-                        cursor: pointer;
                     }
 
                     & .cancel {
@@ -290,48 +244,6 @@
                         }
                     }
                 }
-            }
-        }
-    }
-}
-
-.dropdown {
-    z-index: 1000;
-    position: absolute;
-    width: 256px;
-    background: #fff;
-    padding: 8px;
-    border-radius: 8px;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-    top: 20px;
-    left: 0;
-
-    & header {
-        position: relative;
-        height: 30px;
-        padding: 0;
-
-        & .title {
-            width: 100%;
-            margin: 0;
-            text-align: center;
-        }
-
-        & .close_btn {
-            position: absolute;
-            background: none;
-            border: none;
-            font-size: 1.4em;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            top: 50%;
-            right: 0;
-            transform: translate(0, -50%);
-            cursor: pointer;
-
-            & ion-icon {
-                transform: rotate(45deg);
             }
         }
     }
