--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -37,3 +37,45 @@ textarea {
     overflow: hidden;
     transition: height 0.225s, margin 0.225s;
 }
+
+.dropdown {
+    z-index: 1000;
+    position: absolute;
+    width: 256px;
+    background: #fff;
+    padding: 8px;
+    border-radius: 8px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    top: 20px;
+    left: 0;
+
+    & header {
+        position: relative;
+        height: 30px;
+        padding: 0;
+
+        & .title {
+            width: 100%;
+            margin: 0;
+            text-align: center;
+        }
+
+        & .close_btn {
+            position: absolute;
+            background: none;
+            border: none;
+            font-size: 1.4em;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            top: 50%;
+            right: 0;
+            transform: translate(0, -50%);
+            cursor: pointer;
+
+            & ion-icon {
+                transform: rotate(45deg);
+            }
+        }
+    }
+}
