--- a/src/styles/board.scss
+++ b/src/styles/board.scss
@@ -69,6 +69,7 @@
         background: #e9e9e9;
         border-radius: 8px;
         width: 272px;
+        min-width: 272px;
         padding: 8px 0;
         height: fit-content;
         margin-right: 10px;
@@ -230,7 +231,7 @@
                     & .options {
                         position: relative;
 
-                        & button {
+                        & .option_btn {
                             display: flex;
                             justify-content: center;
                             align-items: center;
