--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,3 +1,8 @@
+hr {
+    border: none;
+    border-top: 2px solid #e9e9e9;
+}
+
 .text_button {
     font-size: 1em;
     border: none;
@@ -55,6 +60,7 @@ textarea {
         padding: 0;
 
         & .title {
+            font-size: 1rem;
             width: 100%;
             margin: 0;
             text-align: center;
@@ -76,6 +82,21 @@ textarea {
             & ion-icon {
                 transform: rotate(45deg);
             }
+        }
+    }
+
+    & .actions_list button {
+        background: none;
+        border: none;
+        border-radius: 8px;
+        font-size: 0.9rem;
+        cursor: pointer;
+        padding: 8px;
+        width: 100%;
+        text-align: left;
+
+        &:hover {
+            background: rgba(0, 0, 0, 0.12);
         }
     }
 }
