--- a/src/styles/board.scss
+++ b/src/styles/board.scss
@@ -55,13 +55,15 @@
     & .add_list_btn {
         position: absolute;
         height: fit-content;
-        background: #ffffff3d;
+        background: #e9e9e9;
         font-size: 0.9em;
         transition: all 0.225s ease;
         width: 272px;
 
-        &:hover {
-            background: #ffffff52;
+        &:hover,
+        &:focus {
+            outline: none;
+            background: #d2d2d2;
         }
     }
 
@@ -73,6 +75,11 @@
         padding: 8px 0;
         height: fit-content;
         margin-right: 10px;
+        box-shadow: 0 0 0 0 rgba(52, 172, 224, 1);
+
+        &:focus-visible {
+            outline: 2px solid lightblue;
+        }
 
         & header {
             display: flex;
@@ -110,8 +117,17 @@
                     display: flex;
                     justify-content: center;
                     align-items: center;
-                    font-size: 1em;
+                    font-size: 1.15em;
                     position: relative;
+                    padding: 8px;
+                    border-radius: 50%;
+                    transition: all 0.225s ease;
+
+                    &:hover,
+                    &:focus {
+                        outline: none;
+                        background: #d2d2d2;
+                    }
                 }
             }
         }
@@ -135,6 +151,10 @@
                 list-style: none;
                 margin-bottom: 10px;
 
+                &:focus-visible {
+                    outline: 2px solid lightblue;
+                }
+
                 & .content {
                     margin: 0;
                     font-size: 0.9em;
@@ -157,6 +177,7 @@
                     justify-content: center;
                     align-items: center;
                     border-radius: 50%;
+                    transition: all 0.225s ease;
 
                     &:hover {
                         background: rgba(226, 226, 226, 0.5);
@@ -179,8 +200,15 @@
                 bottom: 0;
                 width: 256px;
 
-                & button:hover {
-                    background: #d2d2d2;
+                & button {
+                    background: transparent;
+                    transition: all 0.225s ease;
+
+                    &:hover,
+                    &:focus {
+                        outline: none;
+                        background: #d2d2d2;
+                    }
                 }
             }
 
@@ -191,13 +219,18 @@
                 margin-bottom: 10px;
 
                 & textarea {
-                    margin-bottom: 40px;
+                    top: 0;
+                    position: absolute;
+                }
+
+                &:focus-visible {
+                    outline: 2px solid lightblue;
                 }
 
                 & .buttons {
-                    width: 240px;
+                    width: 100%;
                     position: absolute;
-                    bottom: 0;
+                    bottom: -1px;
                     display: flex;
                     gap: 10px;
                     align-items: center;
@@ -206,24 +239,40 @@
                     height: 40px;
 
                     & .save {
+                        transition: all 0.225s ease;
                         background: lightblue;
+
+                        &:hover,
+                        &:focus {
+                            outline: none;
+                            background: #8ac7db;
+                        }
                     }
 
                     & .cancel {
                         flex-grow: 1;
 
                         & button {
+                            transition: all 0.225s ease;
                             display: flex;
                             justify-content: center;
                             align-items: center;
                             border: none;
                             background: none;
-                            font-size: 1.5em;
+                            font-size: 1.3em;
                             cursor: pointer;
+                            padding: 8px;
+                            border-radius: 50%;
 
                             & ion-icon {
                                 font-size: 1.2em;
                                 transform: rotate(45deg);
+                            }
+
+                            &:hover,
+                            &:focus {
+                                outline: none;
+                                background: #d2d2d2;
                             }
                         }
                     }
@@ -232,15 +281,21 @@
                         position: relative;
 
                         & .option_btn {
+                            transition: all 0.225s ease;
                             display: flex;
                             justify-content: center;
                             align-items: center;
                             background: none;
                             border: none;
+                            font-size: 1.3em;
                             cursor: pointer;
+                            padding: 8px;
+                            border-radius: 50%;
 
-                            & ion-icon {
-                                font-size: 1.2em;
+                            &:hover,
+                            &:focus {
+                                outline: none;
+                                background: #d2d2d2;
                             }
                         }
                     }
@@ -294,6 +349,12 @@
             & button {
                 background: lightblue;
                 width: fit-content;
+
+                &:hover,
+                &:focus {
+                    outline: none;
+                    background: #8ac7db;
+                }
             }
         }
 
@@ -308,10 +369,30 @@
                 transform: translate(0, 0);
                 transition: transform 0.225s ease;
 
-                &:hover {
+                &:hover,
+                &:focus {
+                    outline: none;
                     transform: translate(10px, 0);
                 }
             }
         }
+    }
+}
+
+.pulse {
+    animation: pulse-blue 2s infinite;
+}
+
+@keyframes pulse-blue {
+    0% {
+        box-shadow: 0 0 0 0 rgba(52, 172, 224, 0.7);
+    }
+
+    70% {
+        box-shadow: 0 0 0 10px rgba(52, 172, 224, 0);
+    }
+
+    100% {
+        box-shadow: 0 0 0 0 rgba(52, 172, 224, 0);
     }
 }
