--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -48,18 +48,41 @@ textarea {
 .dropdown {
     z-index: 1000;
     position: absolute;
-    width: 256px;
+    width: 300px;
     background: #fff;
     padding: 8px;
     border-radius: 8px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-    top: 20px;
-    left: 0;
+    top: 40px;
+    left: 10px;
 
     & header {
         position: relative;
         height: 30px;
         padding: 0;
+
+        & .back_btn {
+            transition: all 0.225s ease;
+            position: absolute;
+            background: none;
+            border: none;
+            font-size: 1.2em;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            top: 50%;
+            left: 0;
+            transform: translate(0, -50%);
+            cursor: pointer;
+            padding: 8px;
+            border-radius: 50%;
+
+            &:hover,
+            &:focus {
+                outline: none;
+                background: #d2d2d2;
+            }
+        }
 
         & .title {
             font-size: 1rem;
@@ -81,7 +104,7 @@ textarea {
             right: 0;
             transform: translate(0, -50%);
             cursor: pointer;
-            padding: 8px;
+            padding: 6px;
             border-radius: 50%;
 
             & ion-icon {
@@ -96,19 +119,48 @@ textarea {
         }
     }
 
-    & .actions_list button {
-        transition: all 0.225s ease;
-        background: none;
-        border: none;
-        border-radius: 8px;
-        font-size: 0.9rem;
-        cursor: pointer;
-        padding: 8px;
-        width: 100%;
-        text-align: left;
+    & .actions_list {
+        & p {
+            margin: 0;
+            padding: 8px;
+            font-size: 0.9rem;
+            margin-bottom: 10px;
+        }
 
-        &:hover {
-            background: rgba(0, 0, 0, 0.12);
+        & button:disabled,
+        & button[disabled] {
+            background: none;
+            cursor: default;
+
+            &:hover {
+                background: none;
+            }
+        }
+
+        button {
+            transition: all 0.225s ease;
+            background: none;
+            border: none;
+            border-radius: 8px;
+            font-size: 0.9rem;
+            cursor: pointer;
+            padding: 8px;
+            width: 100%;
+            text-align: left;
+
+            &:hover {
+                background: rgba(0, 0, 0, 0.12);
+            }
+
+            &.warning {
+                background: #ff5e57;
+                color: #fff;
+                text-align: center;
+
+                &:hover {
+                    background: #ff3f34;
+                }
+            }
         }
     }
 }
