--- a/src/styles/board.scss
+++ b/src/styles/board.scss
@@ -2,51 +2,56 @@
     display: flex;
     padding: 10px;
 
-    & .add_list {
-        background: #e9e9e9;
-        border-radius: 8px;
-        padding: 8px;
-        width: 256px;
-        margin-right: 10px;
+    & .add_list_wrapper {
+        height: fit-content;
 
-        & input {
-            padding: 8px;
+        & .add_list {
+            background: #e9e9e9;
             border-radius: 8px;
-            border: none;
-            width: calc(100% - 24px);
-            margin-bottom: 10px;
-            font-size: 0.9em;
+            padding: 8px;
+            width: 256px;
+            margin-right: 10px;
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 
-            &:focus {
-                outline: 2px solid lightblue;
-            }
-        }
-
-        & .buttons {
-            display: flex;
-            gap: 10px;
-
-            & .save {
-                font-size: 0.9em;
-                background: lightblue;
-                border: none;
-                border-radius: 8px;
+            & input {
                 padding: 8px;
-                cursor: pointer;
+                border-radius: 8px;
+                border: none;
+                width: calc(100% - 24px);
+                margin-bottom: 10px;
+                font-size: 0.9em;
+
+                &:focus {
+                    outline: 2px solid lightblue;
+                }
             }
 
-            & .cancel {
+            & .buttons {
                 display: flex;
-                justify-content: center;
-                align-items: center;
-                border: none;
-                background: none;
-                font-size: 1.3em;
-                cursor: pointer;
+                gap: 10px;
 
-                & ion-icon {
-                    font-size: 1.2em;
-                    transform: rotate(45deg);
+                & .save {
+                    font-size: 0.9em;
+                    background: lightblue;
+                    border: none;
+                    border-radius: 8px;
+                    padding: 8px;
+                    cursor: pointer;
+                }
+
+                & .cancel {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    border: none;
+                    background: none;
+                    font-size: 1.3em;
+                    cursor: pointer;
+
+                    & ion-icon {
+                        font-size: 1.2em;
+                        transform: rotate(45deg);
+                    }
                 }
             }
         }
@@ -59,6 +64,7 @@
         font-size: 0.9em;
         transition: all 0.225s ease;
         width: 272px;
+        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 
         &:hover,
         &:focus {
@@ -75,7 +81,7 @@
         padding: 8px 0;
         height: fit-content;
         margin-right: 10px;
-        box-shadow: 0 0 0 0 rgba(52, 172, 224, 1);
+        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 
         &:focus-visible {
             outline: 2px solid lightblue;
