--- a/src/styles/board.scss
+++ b/src/styles/board.scss
@@ -62,7 +62,7 @@
         height: fit-content;
         background: #e9e9e9;
         font-size: 0.9em;
-        transition: all 0.225s ease;
+        transition: background 0.225s ease;
         width: 272px;
         box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 
