--- a/src/styles/board.scss
+++ b/src/styles/board.scss
@@ -402,3 +402,276 @@
         box-shadow: 0 0 0 0 rgba(52, 172, 224, 0);
     }
 }
+
+.modal_overlay {
+    position: fixed;
+    inset: 0;
+    background-color: rgba(0, 0, 0, 0.4);
+    z-index: 1000;
+    overflow-y: auto;
+
+    & .modal {
+        position: absolute;
+        left: 50%;
+        top: 48px;
+        transform: translate(-50%, 0);
+        border-radius: 8px;
+        background: #fff;
+        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+        padding: 12px 24px;
+        width: 768px;
+
+        & .title {
+            display: flex;
+            justify-content: space-between;
+            gap: 20px;
+
+            & ion-icon {
+                font-size: 1.5em;
+                margin-top: 3px;
+            }
+
+            & .main {
+                flex-grow: 1;
+
+                & p {
+                    font-size: 0.9em;
+                    margin: 0;
+
+                    &.name {
+                        font-size: 1.2em;
+                        font-weight: 500;
+                    }
+                }
+            }
+
+            & .cancel {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                border: none;
+                background: none;
+                font-size: 1.5em;
+                cursor: pointer;
+
+                & ion-icon {
+                    font-size: 1.2em;
+                    transform: rotate(45deg);
+                }
+            }
+        }
+
+        & .modal_content {
+            width: 100%;
+            margin-top: 25px;
+            display: flex;
+            gap: 20px;
+            align-items: flex-start;
+
+            & .title {
+                align-items: center;
+                margin-bottom: 10px;
+
+                & .main p.name {
+                    font-size: 1em;
+                }
+
+                & button {
+                    font-size: 0.9em;
+                    background: #e9e9e9;
+
+                    &:hover,
+                    &:focus {
+                        outline: none;
+                        background: #d2d2d2;
+                    }
+                }
+            }
+
+            & .left_side {
+                width: 75%;
+                display: flex;
+                flex-direction: column;
+                gap: 30px;
+
+                & .description .content {
+                    padding-left: 45px;
+
+                    & .add_description {
+                        background: #e9e9e9;
+                        border: none;
+                        border-radius: 8px;
+                        width: 100%;
+                        text-align: left;
+                        padding: 8px;
+                        cursor: pointer;
+                        height: 70px;
+                        display: flex;
+                        align-items: flex-start;
+
+                        & p {
+                            margin: 0;
+                            font-size: 1.05em;
+                        }
+
+                        &:hover,
+                        &:focus {
+                            outline: none;
+                            background: #d2d2d2;
+                        }
+                    }
+
+                    & .description_form {
+                        & textarea {
+                            box-shadow: none;
+                            width: calc(100% - 22px);
+                            font-size: 0.9em;
+                            border: 3px solid lightblue;
+
+                            &:focus {
+                                outline: none;
+                            }
+                        }
+
+                        & .actions {
+                            display: flex;
+                            align-items: center;
+
+                            & .save {
+                                background: lightblue;
+                                font-size: 0.9em;
+                            }
+
+                            & .cancel {
+                                display: flex;
+                                justify-content: center;
+                                align-items: center;
+                                border: none;
+                                background: none;
+                                font-size: 1.3em;
+                                cursor: pointer;
+
+                                & ion-icon {
+                                    font-size: 1.2em;
+                                    transform: rotate(45deg);
+                                }
+                            }
+                        }
+                    }
+
+                    & .description_container {
+                        margin: 0;
+                        width: 100%;
+                        white-space: pre-wrap;
+                        word-break: break-all;
+                    }
+                }
+
+                & .activity .content {
+                    & .text_field {
+                        display: flex;
+                        gap: 5px;
+                        transition: all 0.225s ease;
+
+                        & img {
+                            width: 40px;
+                            height: 40px;
+                            border-radius: 50%;
+                            object-fit: cover;
+                        }
+
+                        & .comment_form {
+                            flex-grow: 1;
+                            border-radius: 8px;
+                            position: relative;
+                            overflow: hidden;
+
+                            & textarea {
+                                width: calc(100% - 20px);
+                                box-shadow: none;
+                                height: 89px;
+                                border: 2px solid #e9e9e9;
+                                background: #f6f6f6;
+                                font-size: 0.9em;
+                            }
+
+                            & .actions {
+                                display: flex;
+                                justify-content: space-between;
+                                align-items: center;
+                                font-size: 0.9em;
+                                padding: 0px 8px;
+                                transform: translate(0, -52px);
+
+                                & .save {
+                                    background: lightblue;
+                                }
+
+                                & .comment_options {
+                                    display: flex;
+                                    gap: 10px;
+                                    align-items: center;
+
+                                    & button {
+                                        display: flex;
+                                        justify-content: center;
+                                        align-items: center;
+                                        background: transparent;
+                                        padding: 8px;
+                                        border: none;
+                                        border-radius: 50%;
+                                        font-size: 1.1em;
+                                        cursor: pointer;
+
+                                        &:hover,
+                                        &:focus {
+                                            outline: none;
+                                            background: #e9e9e9;
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+
+            & .right_side {
+                width: 25%;
+
+                & .module {
+                    margin-top: 5px;
+                    margin-bottom: 20px;
+
+                    & .module_title {
+                        font-size: 0.9em;
+                        font-weight: 500;
+                        margin: 0;
+                        margin-bottom: 10px;
+                    }
+
+                    & .module_list {
+                        list-style: none;
+                        margin: 0;
+                        padding: 0;
+                        display: flex;
+                        flex-direction: column;
+                        gap: 5px;
+
+                        & .module_action {
+                            & button {
+                                background: #e9e9e9;
+
+                                &:hover,
+                                &:focus {
+                                    outline: none;
+                                    background: #d2d2d2;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
