--- a/src/styles/board.scss
+++ b/src/styles/board.scss
@@ -446,9 +446,6 @@
             }
 
             & .cancel {
-                display: flex;
-                justify-content: center;
-                align-items: center;
                 border: none;
                 background: none;
                 font-size: 1.5em;
@@ -589,7 +586,7 @@
                             & textarea {
                                 width: calc(100% - 20px);
                                 box-shadow: none;
-                                height: 89px;
+                                height: 69px;
                                 border: 2px solid #e9e9e9;
                                 background: #f6f6f6;
                                 font-size: 0.9em;
@@ -605,6 +602,16 @@
 
                                 & .save {
                                     background: lightblue;
+
+                                    &:disabled,
+                                    &[disabled] {
+                                        background: #e9e9e9;
+                                        cursor: default;
+
+                                        &:hover {
+                                            background: #e9e9e9;
+                                        }
+                                    }
                                 }
 
                                 & .comment_options {
