--- a/src/styles/board.scss
+++ b/src/styles/board.scss
@@ -1,3 +1,7 @@
+:root {
+    --animate-duration: 325ms !important;
+}
+
 .board {
     display: flex;
     padding: 10px;
@@ -406,15 +410,15 @@
 .modal_overlay {
     position: fixed;
     inset: 0;
+    display: flex;
     background-color: rgba(0, 0, 0, 0.4);
     z-index: 1000;
     overflow-y: auto;
+    justify-content: center;
+    padding: 48px;
 
     & .modal {
-        position: absolute;
-        left: 50%;
-        top: 48px;
-        transform: translate(-50%, 0);
+        height: fit-content;
         border-radius: 8px;
         background: #fff;
         box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
