--- a/src/styles/board.scss
+++ b/src/styles/board.scss
@@ -1021,3 +1021,189 @@
         }
     }
 }
+
+.list_action_btn {
+    background: none;
+
+    &:hover,
+    &:focus {
+        outline: none;
+        background: rgba(0, 0, 0, 0.12);
+    }
+}
+
+.board_members_list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+
+    & .board_member {
+        display: flex;
+        padding: 4px;
+        align-items: center;
+        background: none;
+
+        & img {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            object-fit: cover;
+        }
+
+        & .board_member_name {
+            margin: 0;
+            flex-grow: 1;
+        }
+
+        & ion-icon {
+            margin-right: 5px;
+            font-size: 1.2em;
+        }
+    }
+}
+
+.labels_list {
+    list-style: none;
+    padding: 0;
+    margin: 0 0 10px 0;
+
+    & .label_wrapper {
+        display: flex;
+        align-items: center;
+        gap: 5px;
+        margin-bottom: 5px;
+
+        & .label_btn {
+            max-width: 87%;
+            flex-grow: 1;
+            padding: 6px 10px;
+            color: white;
+            font-weight: 600;
+            overflow: hidden;
+            white-space: nowrap;
+            display: block;
+            text-overflow: ellipsis;
+        }
+
+        & .label_edit_btn {
+            height: 35px;
+            width: 35px;
+            padding: 8px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background: none;
+
+            &:hover,
+            &:focus {
+                outline: none;
+                background: rgba(0, 0, 0, 0.12);
+            }
+
+            & ion-icon {
+                font-size: 1em;
+            }
+        }
+    }
+}
+
+.create_new_label {
+    background: #e9e9e9;
+
+    &:hover,
+    &:focus {
+        outline: none;
+        background: #d2d2d2;
+    }
+}
+
+.card_label_green {
+    background: #61bd4f;
+
+    &:hover,
+    &.focus {
+        outline: none;
+        box-shadow: -5px 0 #519839;
+    }
+}
+.card_label_yellow {
+    background: #f2d600;
+
+    &:hover,
+    &.focus {
+        outline: none;
+        box-shadow: -5px 0 #d9b51c;
+    }
+}
+.card_label_orange {
+    background: #ff9f1a;
+
+    &:hover,
+    &.focus {
+        outline: none;
+        box-shadow: -5px 0 #cd8313;
+    }
+}
+.card_label_red {
+    background: #eb5a46;
+
+    &:hover,
+    &.focus {
+        outline: none;
+        box-shadow: -5px 0 #b04632;
+    }
+}
+.card_label_purple {
+    background: #c377e0;
+
+    &:hover,
+    &.focus {
+        outline: none;
+        box-shadow: -5px 0 #89609e;
+    }
+}
+.card_label_blue {
+    background: #0079bf;
+
+    &:hover,
+    &.focus {
+        outline: none;
+        box-shadow: -5px 0 #055a8c;
+    }
+}
+.card_label_lightblue {
+    background: #00c2e0;
+
+    &:hover,
+    &.focus {
+        outline: none;
+        box-shadow: -5px 0 #0098b7;
+    }
+}
+.card_label_lime {
+    background: #51e898;
+
+    &:hover,
+    &.focus {
+        outline: none;
+        box-shadow: -5px 0 #4bbf6b;
+    }
+}
+.card_label_pink {
+    background: #ff78cb;
+
+    &:hover,
+    &.focus {
+        outline: none;
+        box-shadow: -5px 0 #c9558f;
+    }
+}
+.card_label_black {
+    background: #344563;
+
+    &:hover,
+    &.focus {
+        outline: none;
+        box-shadow: -5px 0 #091e42;
+    }
+}
